--- a/tezos-tp2/package.json
+++ b/tezos-tp2/package.json
@@ -25,7 +25,9 @@
     "@taquito/utils": "^15.0.0",
     "dotenv": "^16.0.3",
     "path": "^0.12.7",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
     "typescript": "^4.9.4"
   }
 }
